chore: configurar Supabase CLI e Vercel CLI
- supabase init, scripts (link, start, stop, status, types), README
- vercel como devDependency, scripts (link, pull, env, deploy)
- .env.example com vars Supabase opcionais e POSTGRES_URL
- docs/vercel-cli.md com instruções do Vercel CLI

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,15 @@ AI_GATEWAY_API_KEY=****
 # Instructions to create a Vercel Blob Store here: https://vercel.com/docs/vercel-blob
 BLOB_READ_WRITE_TOKEN=****
 
-# Instructions to create a PostgreSQL database here: https://vercel.com/docs/postgres
+# PostgreSQL (Supabase, Neon ou outro). Para Supabase: use a connection string do painel.
 POSTGRES_URL=****
 
+# Supabase (opcional; use se integrar Auth/Storage/Realtime do Supabase)
+# Obtenha em: https://supabase.com/dashboard/project/_/settings/api
+# NEXT_PUBLIC_* são expostos ao cliente; as demais só no servidor.
+# NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=****
+# SUPABASE_SERVICE_ROLE_KEY=****  # Apenas server-side, nunca em NEXT_PUBLIC_*
 
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
