chore: integração Supabase, ajustes em rotas e remoção de middleware
Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -20,11 +20,19 @@
     "supabase:stop": "supabase stop",
     "supabase:status": "supabase status",
     "supabase:types": "supabase gen types typescript --linked > lib/db/supabase-types.ts",
+    "supabase:config-push": "supabase config push",
+    "supabase:api-keys": "supabase projects api-keys -o env",
+    "supabase:env": "tsx scripts/supabase-env.ts",
+    "supabase:setup": "pnpm run supabase:config-push",
     "vercel:link": "vercel link",
     "vercel:pull": "vercel pull",
     "vercel:env": "vercel env pull .env.local",
+    "vercel:env:prod": "vercel env pull .env.local --environment=production",
     "vercel:deploy": "vercel",
     "vercel:deploy:prod": "vercel --prod",
+    "vercel:open": "vercel open",
+    "vercel:logs": "vercel logs",
+    "analyze": "tsx lib/db/migrate && cross-env ANALYZE=true next build --webpack",
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
   "dependencies": {
@@ -52,6 +60,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@supabase/supabase-js": "^2.98.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
     "@vercel/functions": "^2.0.0",
@@ -112,6 +121,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
+    "@next/bundle-analyzer": "^16.1.6",
     "@playwright/test": "^1.50.1",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.15",
@@ -123,6 +133,7 @@
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
     "baseline-browser-mapping": "^2.10.0",
+    "cross-env": "^10.1.0",
     "drizzle-kit": "^0.25.0",
     "postcss": "^8",
     "supabase": "^2.76.15",
