--- a/.env.example
+++ b/.env.example
@@ -14,15 +14,17 @@ AI_GATEWAY_API_KEY=****
 # Instructions to create a Vercel Blob Store here: https://vercel.com/docs/vercel-blob
 BLOB_READ_WRITE_TOKEN=****
 
-# PostgreSQL (Supabase, Neon ou outro). Para Supabase: use a connection string do painel.
+# PostgreSQL (Supabase, Neon ou outro). Para Supabase: Database → Connection string.
+# Ver supabase/ENV-MAPPING.md para mapear variáveis do projeto Supabase.
 POSTGRES_URL=****
 
-# Supabase (opcional; use se integrar Auth/Storage/Realtime do Supabase)
-# Obtenha em: https://supabase.com/dashboard/project/_/settings/api
-# NEXT_PUBLIC_* são expostos ao cliente; as demais só no servidor.
-# NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
-# NEXT_PUBLIC_SUPABASE_ANON_KEY=****
-# SUPABASE_SERVICE_ROLE_KEY=****  # Apenas server-side, nunca em NEXT_PUBLIC_*
+# Supabase (cliente JS: Auth, Storage, Realtime). Obtenha em: Dashboard → Settings → API
+# Com estas variáveis o app usa Supabase Storage para upload de ficheiros (senão usa Vercel Blob).
+NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=****
+SUPABASE_SERVICE_ROLE_KEY=****
+# Bucket de Storage para ficheiros do chat (criar no Dashboard → Storage). Opcional; default: chat-files
+# SUPABASE_STORAGE_BUCKET=chat-files
 
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
