--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -111,12 +111,11 @@ enabled = true
 # The maximum file size allowed (e.g. "5MB", "500KB").
 file_size_limit = "50MiB"
 
-# Uncomment to configure local storage buckets
-# [storage.buckets.images]
-# public = false
-# file_size_limit = "50MiB"
-# allowed_mime_types = ["image/png", "image/jpeg"]
-# objects_path = "./images"
+# Bucket para ficheiros do chat (imagens e PDF). Usado localmente e enviado com `supabase config push`.
+[storage.buckets.chat-files]
+public = true
+file_size_limit = "5MiB"
+allowed_mime_types = ["image/jpeg", "image/png", "application/pdf"]
 
 # Allow connections via S3 compatible clients
 [storage.s3_protocol]
