chore: atualiza chat, auth, db, scripts e dependências
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,5 @@ SUPABASE_SERVICE_ROLE_KEY=****
 # Bucket de Storage para ficheiros do chat (criar no Dashboard → Storage). Opcional; default: chat-files
 # SUPABASE_STORAGE_BUCKET=chat-files
 
-# Instructions to create a Redis store here:
-# https://vercel.com/docs/redis
-REDIS_URL=****
+# Redis (opcional). Só necessário para rate limiting do chat. Ver: https://vercel.com/docs/redis
+# REDIS_URL=****
