fix(vercel): ativar middleware para evitar HTTP 500 por config em falta
- Renomear proxy.ts para middleware.ts (Next.js só executa middleware.ts)
- Na Vercel, sem AUTH_SECRET ou POSTGRES_URL redireciona para /config-required
- Adicionar secção troubleshooting em .env.example para diagnóstico de 500

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,12 @@ POSTGRES_URL=postgresql://user:password@host:5432/postgres
 # --- Opcionais avançados ---
 # Redis – rate limiting do chat. https://vercel.com/docs/redis
 # REDIS_URL=****
+
+# =============================================================================
+# Troubleshooting: HTTP 500 na Vercel
+# =============================================================================
+# Se vires "não consegue processar este pedido" (500): o middleware redireciona
+# para /config-required quando AUTH_SECRET ou POSTGRES_URL faltam. Confirma em
+# Vercel → Project → Settings → Environment Variables (Production) que estão
+# definidas e faz um redeploy. Se 500 persistir, verifica Vercel → Deployments
+# → Logs (Runtime) para a mensagem de erro real.
