feat: skill revisor-defesas-context, workflow skills-check e docs onboarding
- Adiciona skill revisor-defesas-context em .agents/skills
- Atualiza README e SKILLS_ARCHITECTURE dos agents
- Adiciona workflow GitHub skills-check.yml
- Documentação onboarding em docs/onboarding.md
- Ajustes em .env.example, README, queries, package e supabase config

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,9 @@
 AUTH_SECRET=****
 
 # PostgreSQL – connection string (Supabase, Neon, etc.)
-# Supabase: Dashboard → Settings → Database. Preferir pooler (porta 6543).
-POSTGRES_URL=postgresql://user:password@host:5432/postgres
+# Na Vercel com Supabase: usar SEMPRE o pooler (porta 6543), não a porta 5432.
+# Supabase: Dashboard → Settings → Database → Connection string → "Transaction" (URI com :6543).
+POSTGRES_URL=postgresql://user:password@host:6543/postgres
 
 # --- Opcionais (Vercel preenche automaticamente em deploy) ---
 
@@ -40,8 +41,10 @@ POSTGRES_URL=postgresql://user:password@host:5432/postgres
 # =============================================================================
 # Troubleshooting: HTTP 500 na Vercel
 # =============================================================================
-# Se vires "não consegue processar este pedido" (500): o middleware redireciona
-# para /config-required quando AUTH_SECRET ou POSTGRES_URL faltam. Confirma em
-# Vercel → Project → Settings → Environment Variables (Production) que estão
-# definidas e faz um redeploy. Se 500 persistir, verifica Vercel → Deployments
-# → Logs (Runtime) para a mensagem de erro real.
+# 1) Variáveis em falta: o middleware redireciona para /config-required quando
+#    AUTH_SECRET ou POSTGRES_URL faltam.
+# 2) POSTGRES_URL com Supabase: na Vercel tens de usar o POOLER (porta 6543),
+#    não a conexão direta (5432). Senão a app devolve 500 por falha de conexão.
+#    Em POSTGRES_URL troca :5432 por :6543 (mesmo host e password).
+# 3) Confirma em Vercel → Settings → Environment Variables e redeploy.
+# 4) Se 500 continuar: Vercel → Deployments → Logs (Runtime) para o erro real.
