chore: pre-deploy checklist, auth 401 para CredentialsSignin, lint e Vercel
- Adiciona predeploy: script e docs (pre-deploy-checklist.md)
- Auth: devolve 401 para CredentialsSignin; log de erros no authorize em dev
- Vercel: remove pacote vercel das deps; scripts usam npx vercel; packageManager pnpm@10
- Lint: exclui .agents do Biome; corrige useBlockStatements e noUnusedVariables
- docs/vercel-setup: troubleshooting 500 e CredentialsSignin, secção pre-deploy

Made-with: Cursor

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -17,6 +17,7 @@
       "**/*.jsx",
       "!node_modules",
       "!.next",
+      "!.agents",
       "!ai-sdk",
       "!components/ui",
       "!lib/utils.ts",
