docs(vercel): troubleshooting 500, CredentialsSignin e timezone Supabase; fix lint auth e layout
Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "db:ping": "tsx scripts/db-ping.ts",
     "db:tables": "tsx scripts/db-tables.ts",
     "db:up": "drizzle-kit up",
-    "supabase:link": "supabase link",
-    "supabase:start": "supabase start",
-    "supabase:stop": "supabase stop",
-    "supabase:status": "supabase status",
-    "supabase:types": "supabase gen types typescript --linked > lib/db/supabase-types.ts",
-    "supabase:config-push": "supabase config push",
-    "supabase:api-keys": "supabase projects api-keys -o env",
+    "supabase:link": "npx supabase link",
+    "supabase:start": "npx supabase start",
+    "supabase:stop": "npx supabase stop",
+    "supabase:status": "npx supabase status",
+    "supabase:types": "npx supabase gen types typescript --linked > lib/db/supabase-types.ts",
+    "supabase:config-push": "npx supabase config push",
+    "supabase:api-keys": "npx supabase projects api-keys -o env",
     "supabase:env": "tsx scripts/supabase-env.ts",
     "supabase:setup": "pnpm run supabase:config-push",
     "vercel:link": "npx vercel link",
@@ -141,7 +141,6 @@
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.25.0",
     "postcss": "^8",
-    "supabase": "^2.76.15",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
