feat: auth guest, revisor defesas, docs e testes agente trabalhista
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@
 # ou: openssl rand -base64 32
 AUTH_SECRET=****
 
+# URL da app (Auth.js). Local: http://localhost:3300 (porta do pnpm dev).
+# Na Vercel não é necessário; em local sem isto o guest e callbacks podem dar 500.
+# AUTH_URL=http://localhost:3300
+# Confiar no host do pedido (útil para túneis e modo anónimo). Já temos trustHost: true no auth.config.
+# AUTH_TRUST_HOST=true
+
 # PostgreSQL – connection string (Supabase, Neon, etc.)
 # Na Vercel com Supabase: usar SEMPRE o pooler (porta 6543), não a porta 5432.
 # Supabase: Dashboard → Settings → Database → Connection string → "Transaction" (URI com :6543).
@@ -21,6 +27,7 @@ POSTGRES_URL=postgresql://user:password@host:6543/postgres
 # AI Gateway – na Vercel usa OIDC; fora da Vercel precisa de API key
 # https://vercel.com/ai-gateway
 # AI_GATEWAY_API_KEY=****
+# (Alternativa direta Anthropic, se não usar Gateway: ANTHROPIC_API_KEY=****)
 
 # Vercel Blob – upload de ficheiros (se não usares Supabase Storage)
 # https://vercel.com/docs/vercel-blob
