--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "3.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo -p 3300",
-    "build": "tsx lib/db/migrate && next build",
+    "dev": "cross-env BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next dev --turbo -p 3300",
+    "build": "tsx lib/db/migrate && cross-env BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next build",
     "start": "next start",
     "lint": "ultracite check",
     "format": "ultracite fix",
@@ -37,8 +37,10 @@
     "skills:list": "npx skills list",
     "vercel:logs": "npx vercel logs",
     "predeploy": "tsx scripts/pre-deploy.ts",
-    "analyze": "tsx lib/db/migrate && cross-env ANALYZE=true next build --webpack",
-    "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
+    "analyze": "tsx lib/db/migrate && cross-env ANALYZE=true BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next build --webpack",
+    "test": "export PLAYWRIGHT=True && pnpm exec playwright test",
+    "validate:prompt": "tsx lib/prompts/agente-trabalhista/run-validate.ts",
+    "test:unit": "pnpm exec vitest run"
   },
   "dependencies": {
     "@ai-sdk/gateway": "^3.0.15",
@@ -88,6 +90,7 @@
     "geist": "^1.3.1",
     "katex": "^0.16.25",
     "lucide-react": "^0.446.0",
+    "mammoth": "^1.11.0",
     "motion": "^12.23.26",
     "nanoid": "^5.1.3",
     "next": "16.0.10",
@@ -144,7 +147,8 @@
     "tailwindcss": "^4.1.13",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
-    "ultracite": "^7.0.11"
+    "ultracite": "^7.0.11",
+    "vitest": "^2.1.0"
   },
   "packageManager": "pnpm@10.0.0"
 }
