Revisor de defesas: upload, validação e checklist
- API upload de ficheiros e rota chat atualizadas
- Componentes: chat, multimodal-input, preview-attachment, revisor-checklist
- Agente revisor e prompts em agent-revisor-defesas
- DB: migrate, queries e types
- Docs: PROJETO-REVISOR-DEFESAS, processo-revisor-upload-validacao, ux-ui-revisor-defesas
- Script check-config e .env.example
- next.config, package.json; .gitignore para *.traineddata

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,7 @@ POSTGRES_URL=postgresql://user:password@host:6543/postgres
 # --- Opcionais avançados ---
 # Redis – rate limiting do chat. https://vercel.com/docs/redis
 # REDIS_URL=****
+# OCR para PDFs digitalizados está sempre ativo quando a extração de texto falha (não é necessária variável).
 
 # =============================================================================
 # Troubleshooting: HTTP 500 na Vercel
