--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "skills:list": "npx skills list",
     "vercel:logs": "npx vercel logs",
     "predeploy": "tsx scripts/pre-deploy.ts",
+    "config:check": "tsx scripts/check-config.ts",
     "analyze": "tsx lib/db/migrate && cross-env ANALYZE=true BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next build --webpack",
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test",
     "validate:prompt": "tsx lib/prompts/agente-trabalhista/run-validate.ts",
@@ -52,6 +53,7 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.35.3",
     "@icons-pack/react-simple-icons": "^13.7.0",
+    "@napi-rs/canvas": "^0.1.95",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.200.0",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -98,7 +100,7 @@
     "next-themes": "^0.3.0",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.2",
-    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.624",
     "postgres": "^3.4.4",
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-inputrules": "^1.4.0",
@@ -123,8 +125,11 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^7.0.0",
+    "unpdf": "^1.4.0",
     "use-stick-to-bottom": "^1.1.1",
     "usehooks-ts": "^3.1.0",
+    "word-extractor": "^1.0.4",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -136,7 +141,6 @@
     "@types/d3-scale": "^4.0.8",
     "@types/node": "^22.8.6",
     "@types/papaparse": "^5.3.15",
-    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
