--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/word-extractor": "^1.0.6",
     "baseline-browser-mapping": "^2.10.0",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.25.0",
