feat: export DOCX, SPEC AI Drive Jurídico e melhorias no revisor
- API /api/document/export e lib/document-to-docx para exportar artefactos em DOCX
- Componente document-page-layout e ajustes em document/document-preview
- Documentação SPEC-AI-DRIVE-JURIDICO.md e atualizações em PROJETO-REVISOR-DEFESAS e vercel-setup
- Ajustes em chat route, upload-token, vote, artifacts e queries

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,9 @@ POSTGRES_URL=postgresql://user:password@host:6543/postgres
 # AI_GATEWAY_API_KEY=****
 # (Alternativa direta Anthropic, se não usar Gateway: ANTHROPIC_API_KEY=****)
 
-# Vercel Blob – upload de ficheiros (se não usares Supabase Storage)
+# Vercel Blob – obrigatório para ficheiros > 4,5 MB (em dev e produção)
+# Sem isto, uploads grandes falham. Obter: Vercel Dashboard → Storage → Blob → criar store → copiar token.
+# Em desenvolvimento: adicionar ao .env.local para testar uploads grandes.
 # https://vercel.com/docs/vercel-blob
 # BLOB_READ_WRITE_TOKEN=****
 
