fix: corrigir erros de lint Ultracite para build Vercel
- Substituir any por unknown/tipos concretos (artifacts, components, lib, hooks)
- Remover non-null assertion em lib/utils.ts
- Adicionar title/aria-label em todos os SVGs (icons, weather)
- Usar fieldset em button-group e input-group (a11y)
- Sidebar: biome-ignore document.cookie, corrigir dependências de hooks
- Override useSemanticElements para carousel em biome.json
- Tipos em sheet-editor e document-preview

Made-with: Cursor

--- a/biome.json
+++ b/biome.json
@@ -16,5 +16,17 @@
 		"parser": {
 			"tailwindDirectives": true
 		}
-	}
+	},
+	"overrides": [
+		{
+			"includes": ["components/ui/carousel.tsx"],
+			"linter": {
+				"rules": {
+					"a11y": {
+						"useSemanticElements": "off"
+					}
+				}
+			}
+		}
+	]
 }
