--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "cross-env BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next dev --turbo -p 3300",
+		"dev:test": "cross-env BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next dev --turbo -p 3301",
 		"prebuild": "pnpm run lint && pnpm run test:unit",
 		"build": "pnpm run prebuild && tsx lib/db/migrate && cross-env BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next build",
 		"start": "next start",
